Subdivision modifier with quality 1 crashes blender. #59395

Closed
opened 2018-12-15 00:21:43 +01:00 by Jorge Vásquez Pérez · 10 comments

System Information
Operating system:
Linux 4.19.2-arch1-1-ARCH #1 x86_64 GNU/Linux
Graphics card:
NVIDIA Corporation GP104 [GeForce GTX 1070] (rev a1), drivers for linux ( 410.73-3 )

Blender Version
Broken:
2.80 (sub 37), branch: blender2.8, commit date: 2018-12-14 16:40, hash: ccc09ec124, type: Release
Worked: (optional)
2.80 (sub 31), branch: blender2.8, commit date: 2018-11-16 18:26, hash: 2c347ebbba, type: Release

Short description of error
Subdivision modifier crashes blender in some cases when using the simple algorithm.

Exact steps for others to reproduce the error

  1. open attached file.
    Subdivision_Simple_Base.blend
  2. click in the "Simple" button of the Subdivision modifier.
  3. if crash doesn't occur inmediately, repeat #2 as neede.

system-info.txt

**System Information** Operating system: Linux 4.19.2-arch1-1-ARCH #1 x86_64 GNU/Linux Graphics card: NVIDIA Corporation GP104 [GeForce GTX 1070] (rev a1), drivers for linux ( 410.73-3 ) **Blender Version** Broken: 2.80 (sub 37), branch: blender2.8, commit date: 2018-12-14 16:40, hash: ccc09ec1246, type: Release Worked: (optional) 2.80 (sub 31), branch: blender2.8, commit date: 2018-11-16 18:26, hash: 2c347ebbba9, type: Release **Short description of error** Subdivision modifier crashes blender in some cases when using the simple algorithm. **Exact steps for others to reproduce the error** 1. open attached file. [Subdivision_Simple_Base.blend](https://archive.blender.org/developer/F5956146/Subdivision_Simple_Base.blend) 2. click in the "Simple" button of the Subdivision modifier. 3. if crash doesn't occur inmediately, repeat #2 as neede. [system-info.txt](https://archive.blender.org/developer/F5956152/system-info.txt)

Added subscriber: @yorch

Added subscriber: @yorch

studio/blender-studio#60233 was marked as duplicate of this issue

studio/blender-studio#60233 was marked as duplicate of this issue
Member

Added subscribers: @Sergey, @JacquesLucke

Added subscribers: @Sergey, @JacquesLucke
Sergey Sharybin was assigned by Jacques Lucke 2018-12-17 16:55:53 +01:00
Member

Sry, something for you again @sergey.

Sry, something for you again @sergey.

This is actually caused by bug in OpenSubdiv. Good news: it was fixed in upstream revision 0520fc53ffd. Will check with OpenSubdiv team if there is any release planned soon. or whether it's fine to update to a current development branch.

This is actually caused by bug in OpenSubdiv. Good news: it was fixed in upstream revision 0520fc53ffd. Will check with OpenSubdiv team if there is any release planned soon. or whether it's fine to update to a current development branch.

As always guys, thanks for looking into it.

As always guys, thanks for looking into it.
Sergey Sharybin changed title from Subdivision modifier with simple algorithm crashes blender. to Subdivision modifier with quality 1 crashes blender. 2019-01-07 11:31:10 +01:00

Promoting this report to be an entry point to all related issues.

The root of the problem is following:

  • Specific non-quad topology.
  • Infinitely sharp patches which we request from OpenSubdiv.
  • Creases.
  • Subdivision Quality 1 (simple subdivision is a creased mesh with quality 1).

Trying to figure out good solution which is possible without waiting for the next release of OpenSubdiv (which is will take some time, and is not very stable/recommended for production yet) .

Promoting this report to be an entry point to all related issues. The root of the problem is following: - Specific non-quad topology. - Infinitely sharp patches which we request from OpenSubdiv. - Creases. - Subdivision Quality 1 (simple subdivision is a creased mesh with quality 1). Trying to figure out good solution which is possible without waiting for the next release of OpenSubdiv (which is will take some time, and is not very stable/recommended for production yet) .

Added subscribers: @MilanJaros, @brecht

Added subscribers: @MilanJaros, @brecht

This issue was referenced by d6d101feca

This issue was referenced by d6d101feca09ae17af00f080a76acbc4d6785c3e

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
4 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#59395
No description provided.